@@ -1,7 +1,7 @@
 {
    "abstract" : "Create tests from custom L<Mojolicious> templates",
    "author" : [
-      "Erik Carlsson <info@code301.com>"
+      "Erik Carlsson <csson@cpan.org>"
    ],
    "dynamic_config" : 0,
    "generated_by" : "Dist::Milla version v1.0.5, Dist::Zilla version 5.020, CPAN::Meta::Converter version 2.140640",
@@ -39,7 +39,7 @@
             "Dist::Zilla::File::InMemory" : "5.000",
             "Dist::Zilla::Role::FileGatherer" : "5.000",
             "File::Find::Rule" : "0.33",
-            "MojoX::CustomTemplateFileParser" : "0.04",
+            "MojoX::CustomTemplateFileParser" : "0.05",
             "Moose" : "2.00",
             "Path::Tiny" : "0.050",
             "namespace::sweep" : "0.006",
@@ -64,6 +64,9 @@
          "web" : "https://github.com/Csson/p5-dist-zilla-plugin-test-createfrommojotemplate"
       }
    },
-   "version" : "0.03"
+   "version" : "0.03",
+   "x_contributors" : [
+      "Erik Carlsson <info@code301.com>"
+   ]
 }
 
