@@ -1,4 +1,6 @@
-
+author = Erik Carlsson <csson@cpan.org>
+license = Perl_5
+copyright_holder = Erik Carlsson
 [NameFromDirectory]
 
 [Git::GatherDir]
@@ -97,6 +99,9 @@ allow_dirty = README.md
 allow_dirty = Build.PL
 allow_dirty_match = \.pm$
 commit_msg = %v
+
+[TravisYML]
+perl_version = 5.20 5.18 5.16 5.14
 
 [Git::Tag]
 tag_format = %v
