@@ -1,6 +1,8 @@
 Revision history for Dist-Zilla-Plugin-Test-CreateFromMojoTemplates
 
 {{$NEXT}}
+    - Bumped requirement for MojoX::CustomTemplateFileParser (0.05)
+    - Added Travis build status.
 
 0.03  2014-09-07 21:22:39 CEST
     - Cleanup
